修复Vercel部署锁文件问题

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,7 @@
 public-hoist-pattern[]=*@nextui-org/*
 engine-strict=true
 deploy-all-files=true
+frozen-lockfile=false
+legacy-peer-deps=true
+node-linker=hoisted
+shamefully-hoist=true
