--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,8 @@
   "outputDirectory": "apps/server/dist",
   "rewrites": [
     { "source": "/dash/(.*)", "destination": "/client/dash/$1" },
+    { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/api" }
-  ]
+  ],
+  "framework": null
 } 
