--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,19 @@
 {
   "installCommand": "pnpm install --no-frozen-lockfile",
-  "buildCommand": "chmod +x vercel-build-script.sh && ./vercel-build-script.sh",
+  "buildCommand": "./vercel-build-script.sh",
   "outputDirectory": "apps/server/dist",
   "rewrites": [
     { "source": "/dash/(.*)", "destination": "/client/dash/$1" },
     { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/feeds/(.*)", "destination": "/api/feeds/$1" },
+    { "source": "/healthz", "destination": "/api/healthz" },
     { "source": "/(.*)", "destination": "/api" }
   ],
   "framework": null,
   "buildEnvironment": {
     "SKIP_TS_CHECK": "true",
     "TS_NODE_TRANSPILE_ONLY": "true",
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "PRISMA_SCHEMA_DISABLE_ADVISORY_LOCK": "true"
   }
 } 
