修复: 将vercel.json中不支持的buildEnvironment属性更改为env

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     { "source": "/(.*)", "destination": "/api" }
   ],
   "framework": null,
-  "buildEnvironment": {
+  "env": {
     "SKIP_TS_CHECK": "true",
     "TS_NODE_TRANSPILE_ONLY": "true",
     "NODE_ENV": "production",
