--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "postinstall": "npx prisma generate --schema=apps/server/prisma/schema.prisma",
-    "vercel-build": "npx prisma generate --schema=apps/server/prisma/schema.prisma && npm run build:server && node build-web-emergency.js",
+    "vercel-build": "node vercel-build.js",
     "build": "npm run build:server && npm run build:web"
   },
   "devDependencies": {
