--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "installCommand": "pnpm install --no-frozen-lockfile",
-  "buildCommand": "npx prisma generate --schema=apps/server/prisma/schema.prisma && pnpm --filter server build",
+  "buildCommand": "ls -la && ls -la apps && ls -la apps/server && ls -la apps/server/prisma && npx prisma generate --schema=./apps/server/prisma/schema.prisma && pnpm --filter server build",
   "outputDirectory": "apps/server/dist",
   "rewrites": [
     { "source": "/dash/(.*)", "destination": "/client/dash/$1" },
