添加 Vercel 部署配置和说明文档

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
 public-hoist-pattern[]=*@nextui-org/*
+public-hoist-pattern[]=*prisma*
+public-hoist-pattern[]=*nestjs*
 engine-strict=true
 deploy-all-files=true
 frozen-lockfile=false
