优化Vercel构建脚本，增强可靠性和错误处理

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "installCommand": "pnpm install",
-  "buildCommand": "mkdir -p api && echo 'export default function handler(req, res) { res.json({status:\"ok\"}) }' > api/index.js && mkdir -p client/dash && echo '<h1>WeWe RSS</h1>' > client/dash/index.html",
+  "buildCommand": "node vercel-build.js",
   "outputDirectory": ".",
   "rewrites": [
     { "source": "/dash/(.*)", "destination": "/client/dash/$1" },
@@ -10,4 +10,4 @@
   "env": {
     "NODE_ENV": "production"
   }
-}
+} 
