修复Vercel构建脚本路径问题，使用shell脚本替代

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "installCommand": "pnpm install",
-  "buildCommand": "node vercel-build.js",
+  "buildCommand": "chmod +x build-minimal.sh && ./build-minimal.sh",
   "outputDirectory": ".",
   "rewrites": [
     { "source": "/dash/(.*)", "destination": "/client/dash/$1" },
