--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "installCommand": "pnpm install",
-  "buildCommand": "mkdir -p api client/dash && echo 'module.exports=(req,res)=>res.json({ok:1})' > api/index.js && echo '<!DOCTYPE html><html><head><meta charset=\"UTF-8\"><title>WeWe RSS</title><style>body{font-family:system-ui;margin:40px auto;max-width:650px;line-height:1.6;padding:0 10px;color:#444}h1{color:#0070f3;text-align:center}</style></head><body><h1>WeWe RSS</h1><p style=\"text-align:center\">✅ API服务已启动</p></body></html>' > client/dash/index.html",
+  "buildCommand": "mkdir -p api client/dash && echo 'module.exports=(req,res)=>res.json({ok:1})' > api/index.js && echo '<title>WeWe RSS</title><style>body{font:16px/1.6 system-ui;max-width:650px;margin:40px auto;padding:0 10px}</style><h1>WeWe RSS</h1>' > client/dash/index.html",
   "outputDirectory": ".",
   "rewrites": [
     { "source": "/dash/(.*)", "destination": "/client/dash/$1" },
