--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "installCommand": "pnpm install",
-  "buildCommand": "mkdir -p api && echo 'module.exports=(req,res)=>res.json({status:\"ok\"})' > api/index.js",
+  "buildCommand": "mkdir -p api && echo 'const h=\"<h1>WeWe RSS</h1><p>API服务已启动</p>\";module.exports=(req,res)=>{if(req.url===\"/\"){res.setHeader(\"Content-Type\",\"text/html\");res.end(h)}else{res.json({ok:1})}}' > api/index.js",
   "outputDirectory": ".",
   "rewrites": [
     { "source": "/(.*)", "destination": "/api/index" }
